Corrected environment file

--- a/env.yml
+++ b/env.yml
@@ -1,11 +1,10 @@
-name: 
-  - mccormack
+name: mccormack
 channels:
   - conda-forge
   - defaults
 dependencies:
   - python=3.12
-  - matplotlib 
-  - numpy 
-  - seaborn 
-  - pandas 
+  - pandas
+  - numpy
+  - matplotlib
+  - seaborn
